# img-api-backend

./: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt  test.py
etc/: audio.py  img.py  play.py
lib/: fetch_img.py  verify_api.py
routes/: img_gen.py  test_gen.py  text_gen.py
routes/v1/: img.py
