[project]
name = "p-for-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.121.3",
    "numpy>=2.3.5",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "sounddevice>=0.5.3",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
